--- a/CSS/Cooperativa.css
+++ b/CSS/Cooperativa.css
@@ -1,88 +1,135 @@
-@charset "utf-8";
-:root {
-    --blanco: #FFFFFF;
-    --negro: #000000;
-    --morado: #ebc3ff;
-    --morado_oscuro: #b263d1;
-    --gris: #545454;
-    --grisclaro: #DFE9F3;
+html{
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
 
-
-
-
-.menu{
-    color: #000000;
-    h1{
-        font-size: 40px;
-        text-align: center;
-        margin-block-start: 1rem;
-        margin-block-end: 2rem;
-        margin-inline-start: 0px;
-        margin-inline-end: 0px;
-    }
-}
-
-.nav-principal {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; /* Añadido para centrar verticalmente */
-    padding: 1rem 3rem;
-    background-color: #505050;
-    img {
-        height: 26px;
-        margin-right: 0.5rem; /* Añadido para separar la imagen del texto */
-    }
-    a:hover {
-        background-color: darkkhaki;
-    }
-
-}
-
-nav {
-    font-family: 'Times New Roman', Times, serif;
+h1{
+    font-size:5.5rem;
     text-align: center;
-    width: auto;
-    font-size: 30px;
+    
 }
-a {
-    color: white;
-    text-decoration: none;
+h1,h2,h3{
+    
+    font-size: 3rem;
 }
-
-.entrar {
-    display: flex;
-    align-items: center; /* Añadido para centrar verticalmente */
+.contenedor-navegacion{
+    border-color:darkgrey;
+    border-top-style: solid;
+    border-width: 1px;
+    
 }
-.ima-quesadilla{
+.nav-principal{
+    display: grid;
+    grid-template-columns:repeat(4, 1fr);
+    gap: 2.5rem;
+   padding: 1rem 3rem;
+   font-size: 1.6rem;
+   background-color: rgb(71, 68, 68);
+   color: white;
+}
+.nav-principal img{
+   height: 2rem;
+   grid-column: 4/5;
+}
+.in{
+    grid-column: 1/5;
+}
+.entrar{
+    grid-column: 5/5;
+}
+.imgquesadilla{
     display: flex;
     justify-content: center;
     img{
-        border-radius: 5px;   
-        width: 59.5rem;     
-        height: 20.6rem;
-        border-width: 2px;
-        border-style: solid;
-        border-color: black;  
-        margin-block-end: 4rem;    
+        border-radius: 1.2rem;
+        height: 39.4rem;
+        width: 114rem;
     }
 }
-.combo{
-    border-color: black;
-    border-bottom-style: solid;
-    border-width: 1px;
-    select{
-        margin-inline-start: 40px;
+.texto-menu{
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+    justify-content: center; 
+    font-family: 'Tw Cen MT', sans-serif;            
+    p{
+        font-size: 2rem;
+        padding: 1rem;
+        margin: 0;
+    }
+    
+    .precio{
+        padding: 1rem;
+        font-family: 'Tw Cen MT', sans-serif;
+        font-size: 2rem;
+    }
+    .combo_tamaño{
+        height: 2rem;
+        font-family: 'Tw Cen MT', sans-serif;
+        border-radius: 2rem;
+        border-color: #1583d8;
+        border-width: 0.19rem;
+        margin: 0 1rem;
+    }
+    a{
+        background-color: #f14612;
+        display: block;
+        color: white;
+        text-decoration: none;
+        padding: 1rem;
+        margin: 0 1rem;
+        transition: background-color 0.3s ease-out;
+        height: 1.4rem;
+        width: 7.5rem;
+        border-radius: 0.8rem;
+        font-size: 1.5rem;
+    
+    }
+    a:hover{
+        background-color: #b73b16;
     }
 }
-.imagenes{
+.imagenes_menu {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-
-    p{
-        margin-block-start: 2px;
-        margin-block-end: 0px;
-        margin-inline-start: 0px;
-        margin-inline-end: 0px;
-    }
+    gap: 0.5rem;
+    text-align: center;
+    justify-content: center;
+    padding: 0 0.5rem;
+    margin: 1rem;
+  
+  img {
+    height: 25.5rem;
+    width: 42.8rem;
+    object-fit: cover;
+    
+  }
 }
+  .cantidad-producto {
+    display: flex;
+    align-items: center;
+    margin-left: 1rem;
+  }
+  
+  .input-cantidad {
+    width: 1.9rem;
+    height: 1.9rem;
+    text-align: center;
+    border: 1px solid #1583d8;
+    padding: 0.25rem;
+  }
+  
+  .btn-sumar {
+    background-color: #1583d8;
+    color: white;
+    border: none;
+    height: 1.9rem;
+    width: 1.9rem;
+    padding: 0.25rem 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+  }
+  
+  
+  
+  
