--- a/CSS/inicio-sesion.css
+++ b/CSS/inicio-sesion.css
@@ -129,7 +129,7 @@ display: flex;
   label {
     font-weight: 200;
     font-size: 14px;
-    margin-left: 0; /* Elimina el margen izquierdo de la etiqueta */
+    margin-left: 0; /* Elimina el margen izquierdooo de la etiqueta */
     height: 4rem;
   }
 }
