--- a/CSS/inicio-sesion.css
+++ b/CSS/inicio-sesion.css
@@ -13,20 +13,26 @@ html{
 body{
     background-color: white;
 }
-.fondoinicio{
+.fondo{
+    height: max-content;
+    width: max-content;
+}
+.fondoinicio {
     padding: 0px;
     margin-right: 30px;
     float: left;
-    width: 90rem;
-    height: 74.5rem;
+    width: 90rem; /* Ancho sigue siendo 90rem */
+    height: 100vh; /* Altura al 100% del viewport height */
+    box-sizing: border-box; /* Incluye el padding y borde en el cálculo de altura */
 }
 .contenedor-formulario{
 display: flex;
 }
 
 .formularioo{
-    margin-left: 13rem;
     font-family: "Lato", sans-serif;
+    display: flex;
+    margin: auto;
     label{
         display: block;
         margin-top: 30px;
@@ -54,7 +60,6 @@ display: flex;
     font-family: "Lato", sans-serif;
    
     h3{
-        margin-top: 13rem;
         font-size: 30px;
         text-align:center;
         width: 28.7rem;
