--- a/CSS/Cooperativa.css
+++ b/CSS/Cooperativa.css
@@ -19,7 +19,7 @@ body{
     border-color:darkgrey;
     border-top-style: solid;
     border-width: 1px;
-   
+    border: 0px;
 }
 
 .nav-principal{
