--- a/CSS/MisPedidos.css
+++ b/CSS/MisPedidos.css
@@ -41,21 +41,19 @@ body{
         }
     }
 }
-h2{
+header{
     margin-inline-start: 70px;
     margin-inline-end: 70px;
     margin-block-start: 2rem;
     margin-block-end: 1rem;
+    h2{
+        margin: 0;
+    }
 }
 .mispedidos{
-    margin-inline-start: 70px;
-    margin-inline-end: 70px;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
     display: flex;
     align-items: center;
     .Filtrar{
-        margin: 0px;
         display: flex;
         align-items: center;
         margin-right: 1rem;
