--- a/CSS/micarrito.css
+++ b/CSS/micarrito.css
@@ -7,9 +7,13 @@
     --gris: #545454;
     --grisclaro: #DFE9F3;
 }
+html{
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
 body{
     background-color: #f2f0f0;
-    margin: 0px;
+    margin: 0rem;
 }
 .nav-principal {
     display: flex;
@@ -17,8 +21,13 @@ body{
     align-items: center; /* Añadido para centrar verticalmente */
     padding: 1rem 3rem;
     background-color: #505050;
+    p{
+        color: white;
+        margin: 0rem;
+        margin-right: 0.5rem;
+    }
     img {
-        height: 26px;
+        height: 2.6rem;
         margin-right: 0.5rem; /* Añadido para separar la imagen del texto */
     }
     .botones{
@@ -45,100 +54,93 @@ nav {
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     width: auto;
-    font-size: 30px;
+    font-size: 3rem;
 }
 .botones{
     a {
-        padding-right: 20px;
+        padding-right: 2rem;
         color: white;
         text-decoration: none;
     }
 }
 .Compras{
     color: #000000;
-    margin-inline-start: 70px;
-    margin-inline-end: 70px;
-    margin-block-start: 1rem;
-    margin-block-end: 2rem;
+    margin: 1rem 7rem 2rem;
     background-color: white;
-    border-radius: 6px;
+    border-radius: 0.6rem;
     h1{
-        font-size: 20px;
-        margin-block-start: 0px;
-        margin-block-end: 0px;
-        margin-inline-start: 30px;
-        margin-inline-end: 0px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        font-size: 3.5rem ;
+        margin: 0px 0px 0px 3rem;
+        padding: 20px 0px;
     }
     .imagenes{
-        display: grid;
-        grid-template-columns: repeat(5,1fr);
-        padding: 1rem 2rem;
+        font-size: 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center; /* Añadido para centrar verticalmente */
+        padding: 1.6rem 8rem 1.6rem 4.8rem;
         gap: 1rem;
         border-color: #000000;
-        border-top: 1px;
+        border-top: 0.1rem;
         border-top-style: solid;
         img{
-            height: 100px;
-            width: 300px;
+            height: 10rem;
+            width: 30rem;
         }
-        :nth-child(1){
-            grid-column-start: 1;
-            grid-column-end: 2;
-        }
-        :nth-child(2){
-            grid-column-start: 2;
-            grid-column-end: 5;
-        }
-        :nth-child(3){
-            grid-column-start: 5;
-            grid-column-end: 6;
+        h3{
+            font-size: 3rem;
+            margin: 0rem;
         }
         .cantidad{
             display: flex;
             gap: 1rem;
+            margin-top: 5.02rem;
+        }
+        p{
+            margin:0rem;
+            font-size: 2.2rem;
+        }
+        .datos{
+            margin: 0 0 0 2vw; /* 5% del ancho de la ventana en los márgenes horizontal */
+
+        }
+        .precio{
+            text-align: center;
+            justify-content: center;
+        }
+        .detalles{
+            display: flex;
+            justify-content: center;
         }
     }
 }
 .total{
     border-color: #000000;
-    border-top: 1px;
+    border-top: 0.1rem;
     border-top-style: solid;
-    justify-content: end;
-    display: grid;
-    grid-template-columns: repeat(11,1fr);
-    padding: 1rem 4.4rem;
+    display: flex;
+    justify-content: right;
+    padding: 1.6rem 8rem 1.6rem 4.8rem;
+    gap: 1rem;
     h2{    
         color: black;
-        text-align: center;
-    }
-    :nth-child(1){
-        grid-column-start: 9;
-        grid-column-end: 10;
-    }
-    :nth-child(2){
-        grid-column-start: 10;
-        grid-column-end: 11;
+        font-size: 2.2rem;
     }
 }
 .boton{
     display: flex;
     justify-content: center;
-    padding-bottom: 30px;
+    padding-bottom: 3rem;
     a{
         background-color:#F14612;
-        font-size: 25px;
-        color: #000000;
+        font-size: 3rem;
+        color: #ffffff;
         text-decoration: none;
-        height: 60px;
-        width: 360px;
-        border-radius: 8px;
+        height: 6rem;
+        width: 36rem;
+        border-radius: 0.8rem;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 }
-
-
-
