--- a/CSS/micarrito.css
+++ b/CSS/micarrito.css
@@ -144,3 +144,9 @@ nav {
         justify-content: center;
     }
 }
+@media(max-width: 1200px){
+    html{
+        box-sizing: border-box;
+        font-size: 50%;
+    }
+}
