--- a/CSS/QRtarjeta.css
+++ b/CSS/QRtarjeta.css
@@ -7,47 +7,12 @@ body{
     background-color: #f2f0f0;
     margin: 0rem;
 }
-.nav-principal {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; /* Añadido para centrar verticalmente */
-    padding: 1rem 3rem;
-    background-color: #505050;
-    p{
-        color: white;
-        margin: 0rem;
-        margin-right: 0.5rem;
-    }
-    img {
-        height: 2.6rem;
-        margin-right: 0.5rem; /* Añadido para separar la imagen del texto */
-    }
-    .botones{
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        a:hover{
-            transform: scale(1.1);
-        }
-    }
-    .entrar {
-        display: flex;
-        align-items: center; /* Añadido para centrar verticalmente */
-        a:hover{
-            transform: scale(1.1);
-        }
-        a{
-            display: flex;
-            align-items: center;
-        }
-    }
-}
 
-nav {
-    font-family: 'Times New Roman', Times, serif;
-    text-align: center;
-    width: auto;
-    font-size: 3rem;
+.menu-container{
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .botones{
