--- a/CSS/Registro.css
+++ b/CSS/Registro.css
@@ -13,17 +13,92 @@ html{
 body{
     background-color: white;
 }
-.fondo{
-    height: max-content;
-    width: max-content;
+
+@media (min-width:1201px){
+    .fondo{
+        height: max-content;
+        width: max-content;
+    }
+    .fondoinicio {
+        padding: 0px;
+        margin-right: 30px;
+        float: left;
+        width: 90rem; /* Ancho sigue siendo 90rem */
+        height: 100vh; /* Altura al 100% del viewport height */
+        box-sizing: border-box; /* Incluye el padding y borde en el cálculo de altura */
+    }
+  
 }
-.fondoinicio {
-    padding: 0px;
-    margin-right: 30px;
-    float: left;
-    width: 90rem; /* Ancho sigue siendo 90rem */
-    height: 100vh; /* Altura al 100% del viewport height */
-    box-sizing: border-box; /* Incluye el padding y borde en el cálculo de altura */
+@media (max-width:1200px){
+
+    .contenedor-formulario {
+        position: relative; 
+        height: 100vh; 
+    }
+    
+    .fondo {
+        position: absolute; 
+        top: 0;
+        left: 0;
+        width: 100%; 
+        height: 100%; 
+    }
+    
+    .fondoinicio {
+        width: 100%; 
+        height: 100%; 
+        object-fit: cover; 
+    }
+    
+    .formularioo {
+        position: absolute; /* Establece el posicionamiento absoluto */
+        top: 50%; /* Alinea el formulario al centro vertical */
+        left: 50%; /* Alinea el formulario al centro horizontal */
+        transform: translate(-50%, -50%);
+        padding: 5rem; 
+        background-color: white; 
+        
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+        
+    }
+}
+@media (max-width: 768px){
+    .contenedor-formulario {
+        position: relative; 
+        height: 100vh; 
+    }
+    
+    .fondo {
+        position: absolute; 
+        top: 0;
+        left: 0;
+        width: 100%; 
+        height: 100%; 
+        background-image: url("img/recetas-de-comida-típicas-de-Oaxaca-11-1.jpeg");
+        background-size: cover;
+        background-position: center;
+        opacity: 0.4;
+    
+    }
+    
+    .fondoinicio {
+        width: 100%; 
+        height: 100%; 
+        object-fit: cover; 
+        
+    }
+    
+    .formularioo {
+        position: absolute; /* Establece el posicionamiento absoluto */
+        top: 50%; /* Alinea el formulario al centro vertical */
+        left: 50%; /* Alinea el formulario al centro horizontal */
+        transform: translate(-50%, -50%);
+        padding: 3rem; 
+        background-color: white; 
+        
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+        
+    }
 }
 .contenedor-formulario{
 display: flex;
