--- a/CSS/inicio-sesion.css
+++ b/CSS/inicio-sesion.css
@@ -13,129 +13,204 @@ html{
 body{
     background-color: white;
 }
-.fondo{
-    height: max-content;
-    width: max-content;
-}
-.fondoinicio {
-    padding: 0px;
-    margin-right: 30px;
-    float: left;
-    width: 90rem; /* Ancho sigue siendo 90rem */
-    height: 100vh; /* Altura al 100% del viewport height */
-    box-sizing: border-box; /* Incluye el padding y borde en el cálculo de altura */
-}
-.contenedor-formulario{
-display: flex;
-}
-
-.formularioo{
-    font-family: "Lato", sans-serif;
-    display: flex;
-    margin: auto;
-    label{
-        display: block;
-        margin-top: 30px;
-        font-size: 16px;
-        font-weight: 700;
+@media (min-width:1201px){
+    .fondo{
+        height: max-content;
+        width: max-content;
     }
-    input{
-        display: block;
-        height: 40px;
-        width: 30rem;
-        border-radius: 3px;
+    .fondoinicio {
+        padding: 0px;
+        margin-right: 30px;
+        float: left;
+        width: 90rem; /* Ancho sigue siendo 90rem */
+        height: 100vh; /* Altura al 100% del viewport height */
+        box-sizing: border-box; /* Incluye el padding y borde en el cálculo de altura */
+    }
+  
+}
+@media (max-width:1200px){
+
+    .contenedor-formulario {
+        position: relative; 
+        height: 100vh; 
+    }
     
-        margin-top: 8px;
-        font-size: 14px;
+    .fondo {
+        position: absolute; 
+        top: 0;
+        left: 0;
+        width: 100%; 
+        height: 100%; 
+    }
+    
+    .fondoinicio {
+        width: 100%; 
+        height: 100%; 
+        object-fit: cover; 
+    }
+    
+    .formularioo {
+        position: absolute; /* Establece el posicionamiento absoluto */
+        top: 50%; /* Alinea el formulario al centro vertical */
+        left: 50%; /* Alinea el formulario al centro horizontal */
+        transform: translate(-50%, -50%);
+        padding: 5rem; 
+        background-color: white; 
+        
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
         
     }
-    ::placeholder{
-        color: #e5e5e5;
-    }
-
-   
 }
-
-.texto-formulario{
-    font-family: "Lato", sans-serif;
-   
-    h3{
-        font-size: 30px;
-        text-align:center;
-        width: 28.7rem;
+@media (max-width: 768px){
+    .contenedor-formulario {
+        position: relative; 
+        height: 100vh; 
     }
-    p{
-        font-size: 15px;
-        margin-top: 2.3rem;
-        margin-bottom: 7rem;
-        color: rgb(119, 119, 119);
-        text-align: center;
-        width: 30rem;
+    
+    .fondo {
+        position: absolute; 
+        top: 0;
+        left: 0;
+        width: 100%; 
+        height: 100%; 
+        background-image: url("img/recetas-de-comida-típicas-de-Oaxaca-11-1.jpeg");
+        background-size: cover;
+        background-position: center;
+        opacity: 0.4;
+    
     }
-
-}
-.botones{
- margin-top: 2rem;
- text-align: center;
- justify-content: space-around;
- display: flex;
- button {
-    padding: 10px 20px; /* Ajusta el espacio interno de los botones */
-    font-size: 16px; /* Cambia el tamaño de fuente */
-    border-radius: 0.8rem;
-    cursor: pointer;
-    font-family: "Lato", sans-serif;
-    font-weight: 700;
-  }
-  
-  
-
-}
-.botones{
-    .Login{
-        background-color: #2185d0;
-        border-color: #2185d0;
-        color: white;
+    
+    .fondoinicio {
+        width: 100%; 
+        height: 100%; 
+        object-fit: cover; 
         
-      }
-      .Signup{
-        background-color: #1b1c1d;
-        border-color: #1b1c1d;
-        color: white;
-        margin-left: 0.45rem;
-      }
-}
-
-
-.texto-abajo{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 10px;
-    a{
-        margin-top: 4rem;
-        font-size: 14px;
-        margin-left: 0px;
+    }
+    
+    .formularioo {
+        position: absolute; /* Establece el posicionamiento absoluto */
+        top: 50%; /* Alinea el formulario al centro vertical */
+        left: 50%; /* Alinea el formulario al centro horizontal */
+        transform: translate(-50%, -50%);
+        padding: 3rem; 
+        background-color: white; 
+        
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+        
     }
 }
 
-.recordar {
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-  
-    input[type="checkbox"] {
-    width: 16px; /* Ajusta el tamaño del checkbox */
-    height: 16px;
-    margin-right: 5px; /* Agrega un margen derecho para separarlo de la etiqueta */
-    border-radius: 2rem;
-  }
-  
-  label {
-    font-weight: 200;
-    font-size: 14px;
-    margin-left: 0; /* Elimina el margen izquierdooo de la etiqueta */
-    height: 4rem;
-  }
-}
 
+.contenedor-formulario{
+    display: flex;
+    }
+    
+    .formularioo{
+        font-family: "Lato", sans-serif;
+        display: flex;
+        margin: auto;
+        label{
+            display: block;
+            margin-top: 30px;
+            font-size: 16px;
+            font-weight: 700;
+        }
+        input{
+            display: block;
+            height: 40px;
+            width: 30rem;
+            border-radius: 3px;
+        
+            margin-top: 8px;
+            font-size: 14px;
+            
+        }
+        ::placeholder{
+            color: #e5e5e5;
+        }
+    
+       
+    }
+    
+    .texto-formulario{
+        font-family: "Lato", sans-serif;
+       
+        h3{
+            font-size: 30px;
+            text-align:center;
+            width: 28.7rem;
+        }
+        p{
+            font-size: 15px;
+            margin-top: 2.3rem;
+            margin-bottom: 7rem;
+            color: rgb(119, 119, 119);
+            text-align: center;
+            width: 30rem;
+        }
+    
+    }
+    .botones{
+     margin-top: 2rem;
+     text-align: center;
+     justify-content: space-around;
+     display: flex;
+     button {
+        padding: 10px 20px; /* Ajusta el espacio interno de los botones */
+        font-size: 16px; /* Cambia el tamaño de fuente */
+        border-radius: 0.8rem;
+        cursor: pointer;
+        font-family: "Lato", sans-serif;
+        font-weight: 700;
+      }
+      
+      
+    
+    }
+    .botones{
+        .Login{
+            background-color: #2185d0;
+            border-color: #2185d0;
+            color: white;
+            
+          }
+          .Signup{
+            background-color: #1b1c1d;
+            border-color: #1b1c1d;
+            color: white;
+            margin-left: 0.45rem;
+          }
+    }
+    
+    
+    .texto-abajo{
+        display: flex;
+        justify-content: space-around;
+        margin-top: 10px;
+        a{
+            margin-top: 4rem;
+            font-size: 14px;
+            margin-left: 0px;
+        }
+    }
+    
+    .recordar {
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        font-size: 14px;
+      
+        input[type="checkbox"] {
+        width: 16px; /* Ajusta el tamaño del checkbox */
+        height: 16px;
+        margin-right: 5px; /* Agrega un margen derecho para separarlo de la etiqueta */
+        border-radius: 2rem;
+      }
+      
+      label {
+        font-weight: 200;
+        font-size: 14px;
+        margin-left: 0; /* Elimina el margen izquierdooo de la etiqueta */
+        height: 4rem;
+      }
+    }
