--- a/CSS/pagotarjeta.css
+++ b/CSS/pagotarjeta.css
@@ -15,6 +15,15 @@ body{
     width: 100%;
 }
 
+@media (min-width: 768px){
+    .menu-container{
+        position: sticky;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+}
+
 .botones{
     a {
         padding-right: 2rem;
@@ -35,11 +44,10 @@ body{
 
     .datos{
         font-size: 1.5rem;
-        padding: 3rem;
+        padding: 3rem;;
         
         .codi {
-            display: flex;
-            gap: 3rem;
+            gap: 6rem;
 
             .let{
                 color: #505050;
@@ -50,22 +58,60 @@ body{
             }  
         }   
     }
+    
+}
 
-    .imagenes{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        padding: 1rem 2rem;
-        gap: 1rem;
-
-        img{
-            height: 30rem;
-            width: 30rem;
-            margin: auto;
-            display: block;
+@media (min-width: 768px){
+    .pagos{
+        color: #000000;
+        margin-inline-start: 7rem;
+        margin-inline-end: 7rem;
+        margin-block-start: 1rem;
+        margin-block-end: 2rem;
+        background-color: white;
+        border-radius: 0.6rem;
+        align-items: center;
+    
+        .datos{
+            font-size: 1.5rem;
+            padding: 3rem;
+            
+            .codi {
+                display: flex;
+                gap: 3rem;
+    
+                .let{
+                    color: #505050;
+                }
+    
+                .letra{
+                    color: #505050;
+                }  
+            }   
         }
+    
+        .imagenes{
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            padding: 1rem 2rem;
+            gap: 1rem;
+    
+            img{
+                height: 30rem;
+                width: 30rem;
+                margin: auto;
+                display: block;
+            }
+        }
+        
+        
     }
-    
-    
+}
+
+@media (max-width: 768px){
+    p, img {
+        display: none;
+    }
 }
 
 .boton{
@@ -74,15 +120,35 @@ body{
     padding-bottom: 3rem;
     a{
         background-color:#F14612;
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         color: #000000;
         text-decoration: none;
         height: 6rem;
-        width: 36rem;
+        width: 19rem;
         border-radius: 0.8rem;
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+}
+
+@media (min-width: 768px){
+    .boton{
+        display: flex;
+        justify-content: center;
+        padding-bottom: 3rem;
+        a{
+            background-color:#F14612;
+            font-size: 2.5rem;
+            color: #000000;
+            text-decoration: none;
+            height: 6rem;
+            width: 36rem;
+            border-radius: 0.8rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 }
 
