--- a/CSS/pagotarjeta.css
+++ b/CSS/pagotarjeta.css
@@ -172,26 +172,18 @@ body{
     
         .imagenes{
             display: grid;
-            grid-template-rows: repeat(2,1fr);
+            grid-template-columns: repeat(2,1fr);
             grid-template-rows: auto 1fr; /* Una fila para la imagen y otra para los inputs */
             align-items: start;   
             padding: 1rem 2rem;
             gap: 1rem;
     
-            img {
-                .tarj{
-                    height: 30rem;
-                    width: 30rem;
-                    margin: auto;
-                    display: block;
-                    grid-row: 1;  /* Coloca la imagen en la primera fila */
+            img{
+                height: 30rem;
+                width: 30rem;
+                margin: auto;
+                display: block;
                 
-                }
-            }
-
-
-            input {
-                grid-row: 2;  /* Coloca los inputs en la segunda fila */
             }
         }
         
