--- a/CSS/pagotarjeta.css
+++ b/CSS/pagotarjeta.css
@@ -105,9 +105,7 @@ body{
             align-content: left;
             
             .codi {
-                display: flex;
-                gap: 1rem;
-    
+                align-content: left;
                 .let{
                     color: #505050;
                 }
@@ -117,21 +115,6 @@ body{
                 }  
             }   
         }
-    
-        .imagenes{
-            display: grid;
-            grid-template-columns: repeat(2,1fr);
-            padding: 1rem 2rem;
-            gap: 1rem;
-    
-            img{
-                height: 30rem;
-                width: 30rem;
-                margin: auto;
-                display: block;
-            }
-        }
-        
         
     }
 }
